# Synapse

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: base.py
agents copy/: __init__.py  base.py
core/: bus.py  coordinator.py  memory.py  runtime.py
core copy/: __init__.py  coordinator.py  memory.py  runtime.py
examples/: basic_team.py  index.html  server.py
examples copy/: __init__.py  basic_team.py
protocols/: __init__.py  message.py
protocols copy/: __init__.py
synapse/: __init__.py  dag.py  result.py
synapse/agents/: base.py
synapse/core/: bus.py  coordinator.py  memory.py  runtime.py
synapse/protocols/: message.py
